grammar.txt
GridFlow {
  Level0 = Logical
  
  # Left-associative operators have this form:
  # level25 = level25 OPERATOR level26
  #         | level26
  # They recurse in their left operand and descend in their right. You've made
  # some operators right-associative.
  Logical =
   NotExp "and" Logical --amdd
  | NotExp "or" Logical --orr
  | NotExp
  
  # ! should have very high precedence. !x == y should be (!x) == y.
  NotExp = 
    "!" Comparison --not
  | Comparison --other
  
  # This makes it some comparisons can't chain. But they do sometimes. Often
  # the equality operators have lower precedence so that we can say things
  # like a < b == b < c without parentheses.
  Comparison 
  = BitwiseOr "<"  BitwiseOr --lessthan
  | BitwiseOr ">"  BitwiseOr --greater
  | BitwiseOr "<="  BitwiseOr --lessthanequals
  | BitwiseOr ">="  BitwiseOr --greaterthanequals
  | BitwiseOr "=="  BitwiseOr --equals
  | BitwiseOr "!="  BitwiseOr --notequals
  | BitwiseOr
  
  BitwiseOr
  = BitwiseXor "|" BitwiseOr --or
  | BitwiseXor
  
  BitwiseXor
  = BitwiseAnd "^" BitwiseXor --bitwisexor
  | BitwiseAnd
  
  BitwiseAnd
  = BitwiseShift "&" BitwiseAnd --bitwiseand
  | BitwiseShift
  
  BitwiseShift
  = AddExp ">>" BitwiseShift --rshift
  | BitwiseShift "<<" AddExp --lshift
  | AddExp
  
    
  AddExp
    = AddExp "+" MulExp  -- plus
    | AddExp "-" MulExp  -- minus
    | MulExp

  MulExp
    = MulExp "*" ExpExp  -- times
    | MulExp "/" ExpExp  -- divide
    |MulExp "%" ExpExp --mod
    | ExpExp

  # Good, this ordering of non-terminals makes exponentiation
  # right-associative.
  ExpExp
    = PriExp "^" ExpExp  -- power
    | PriExp

  PriExp
    = "(" Logical ")"  -- paren
    | "-" PriExp   -- neg
    | Number
    
  Int
  = digit*
  
  Float
  = digit*"."digit *
  
  Number  (a number)
    = Cast
    | GridValue
    | Boolean
    | INT
    | FLOAT
    | Cast
    | Boolean
  
  Cast = 
  "flt"  PriExp 
  | "int" PriExp
  
  GridValue 
  = CellRValue
  | Statistical
  | CellLValue
  
  Statistical
 = Mean "("CellLValue","CellLValue")"
 | Min"("CellLValue","CellLValue")"
 | Max"("CellLValue","CellLValue")"
 | Sum"("CellLValue","CellLValue")"

CellLValue
 = "["AddExp, AddExp"]"

CellRValue
= "#["AddExp, AddExp"]"

Boolean
  	= "True"
    | "False"

}
